# AstroDat

./: .gitignore  CODEOFCONDUCT.md  CONTRIBUTING.md  Make_Pk_working.ipynb  NEWS.md  README.md  basic_pipeline.ipynb  beth.mplstyle  emulators_example.ipynb  main.ipynb  main.py  power_spectrum_beth.ipynb  pyproject.toml  tests_Make_Pk.py
Data/: First_dataset_sample.npy
sbi-logs/NLE_A/2025-09-11T10_47_13.464957/: events.out.tfevents.1757584033.ps-blw-502545.131445.0
sbi-logs/NLE_A/2025-09-11T10_47_54.966783/: events.out.tfevents.1757584074.ps-blw-502545.131445.1
sbi-logs/NLE_A/2025-09-11T10_48_07.675889/: events.out.tfevents.1757584087.ps-blw-502545.131445.2
sbi-logs/NLE_A/2025-09-11T10_48_36.115367/: events.out.tfevents.1757584116.ps-blw-502545.131445.3
sbi-logs/NLE_A/2025-09-11T10_48_44.034059/: events.out.tfevents.1757584124.ps-blw-502545.131445.4
sbi-logs/NLE_A/2025-09-11T10_49_32.744850/: events.out.tfevents.1757584172.ps-blw-502545.131445.5
sbi-logs/NLE_A/2025-09-11T10_52_13.799157/: events.out.tfevents.1757584333.ps-blw-502545.131445.6
sbi-logs/NLE_A/2025-09-11T11_42_24.800348/: events.out.tfevents.1757587344.ps-blw-502545.131445.7
sbi-logs/NLE_A/2025-09-11T11_42_56.088237/: events.out.tfevents.1757587376.ps-blw-502545.131445.8
sbi-logs/NLE_A/2025-09-11T11_43_03.697800/: events.out.tfevents.1757587383.ps-blw-502545.131445.9
sbi-logs/NLE_A/2025-09-11T11_43_10.370090/: events.out.tfevents.1757587390.ps-blw-502545.131445.10
sbi-logs/NLE_A/2025-09-11T11_43_29.133231/: events.out.tfevents.1757587409.ps-blw-502545.131445.11
sbi-logs/NLE_A/2025-09-11T11_43_36.082238/: events.out.tfevents.1757587416.ps-blw-502545.131445.12
sbi-logs/NLE_A/2025-09-11T11_45_05.957581/: events.out.tfevents.1757587505.ps-blw-502545.131445.13
sbi-logs/NLE_A/2025-09-11T11_47_50.133599/: events.out.tfevents.1757587670.ps-blw-502545.131445.14
sbi-logs/NLE_A/2025-09-11T11_48_07.772081/: events.out.tfevents.1757587687.ps-blw-502545.131445.15
sbi-logs/NLE_A/2025-09-11T11_48_20.890218/: events.out.tfevents.1757587700.ps-blw-502545.131445.16
(+36 files in other folders)
