[project]
name = "emulatte"
readme = "README.md"
requires-python = ">=3.11"
#authors = [{ "name" = "Neel Shah", "email" = "neel.shah@port.ac.uk" }]
authors = [{name = "Beth McCarthy Gould"},
           {name = "Carola Zanoletti"},
           {name = "David Sciotti"},
           {name = "Kiyam Lin"},
           {name = "Neel Shah"}]
#maintainers = [{ "name" = "Neel Shah", "email" = "neel.shah@port.ac.uk" }]
maintainers = [{name = "Beth McCarthy Gould"},
               {name = "Carola Zanoletti"},
               {name = "David Sciotti"},
               {name = "Kiyam Lin"},
               {name = "Neel Shah"}]
description = "This is an example cosmology package."
dependencies = ["numpy"]
version = "0.0.1"

[project.optional-dependencies]
docs = [
    "myst-parser",
    "numpydoc",
    "sphinx",
    "sphinx-book-theme",
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-emoji",
    "pytest-pydocstyle",
]

lint = ["black", "isort"]
release = ["build", "twine"]

dev = ["mycosmo[docs,lint,release,test]"]

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = ["--verbose", "--emoji", "--pydocstyle", "--cov=mycosmo"]
testpaths = ["mycosmo"]
